Use Double.valueOf